See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 11.05.00

              pamtosvg: fix "zero determinant" failure.  Introduced in
              Netpbm 11.04 (September 2023).

              pjtoppm: fix crash based on uninitialized variable.
              Introduced in Netpbm 11.04 (September 2023).

              ppmtopcxl: fix incorrect output with > 256 colors.  Always
              broken.  (Program was added in primordial Netpbm in 1990).

              pbmtext: fix buffer overrun with insanely large input.

              picttoppm: fix buffer overrun with insanely wide input.

              ppmtoxpm: fix incorrect output with insanely large number of
              colors.

              pnmscalefixed: fix incorrect output with really big image and
              -pixels option.

              ppmdither: fix buffer overrun with insanely large dithering
              matrix.

              libnetpbm, programs that use color maps: fix buffer overrun
              with insanely deep images.

              Build: Fix compile error on systems without 'asprintf'.
              Introduced in Netpbm 11.04 (September 2023).

              Build: Fix building of jpeg2ktopam and pamtojpeg2k with
              assertion checking by default.

23.09.27 BJH  Release 11.04.00

              pamaddnoise: add -salt.

              pamaddnoise: reject options that aren't meaningful for the type
              of noise specified rather than just ignore them.

              ppmtosixel: Add -7bit, so it works on more terminals, including
              xterms.  Thanks Scott Pakin.

              g3topbm: Add -correctlong

              build: Add COMPILED_BY environment variable to control the
              "compiled by" value from --version common option.  This helps
              with creating reproducible builds.

              pnmtojpeg: minor improvement to error messages about bad files.
