@@ -6,6 +6,8 @@ CHANGE HISTORY
 
 not yet  BJH  Release 11.05.00
 
+              pnmpad: Add -extend-edge.
+
               pamtosvg: fix "zero determinant" failure.  Introduced in
               Netpbm 11.04 (September 2023).
 
